# agent-skill-Self-evolution

./: .gitignore  Dockerfile.worker  README.md  agent.md  platform.yaml  pyproject.toml
alembic/: env.py
enterprise_v2/: .env  .gitignore  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  pyproject.toml
enterprise_v2/contracts/src/python/skill_contract/parsers/: frontmatter.py  manifest.py
enterprise_v2/contracts/src/python/skill_contract/validators/: actions.py  interface.py
enterprise_v2/deploy/: README.md
enterprise_v2/docs/: 2026-04-03-skill-package-contract-v1-implementation-alignment.md  2026-04-04-five-layer-plain-guide.md  README.md
enterprise_v2/docs/engineering/: 00-program-overview-and-reuse-map.md  01-environment-kernel-and-runtime.md  02-skill-package-and-actions.md  03-registry-search-governance.md  04-skill-factory-and-lab.md  05-implementation-roadmap.md  07-skill-factory-lab-implementation-sync.md  README.md
enterprise_v2/docs/plan/: v0.5-skill-engine-reframe.md  v0.5b-skill-runtime-delivery-plan.md  v0.5c-backend-enhancement-delivery-plan.md  v0.5d-master-delivery-governance.md  v0.5devplan.md
enterprise_v2/factory/src/python/skill_factory/: pipeline.py
enterprise_v2/integration/src/python/agent_skill_platform/: __init__.py
enterprise_v2/integration/src/python/agent_skill_platform/engine/: __init__.py  models.py  search.py
enterprise_v2/integration/src/python/agent_skill_platform/lab/: outcome_store.py
enterprise_v2/integration/src/python/agent_skill_platform/registry/: adapter.py  service.py
enterprise_v2/registry/docs/skillhub/: 2026-04-01-skill-discovery-and-recommendation-architecture.md
enterprise_v2/runtimes/environment-kernel/: README.md
enterprise_v2/services/skill-registry/: README.md
enterprise_v2/src/agent_skill_platform/engine/: __init__.py  api.py
enterprise_v2/src/agent_skill_platform/jobs/: worker.py
enterprise_v2/src/agent_skill_platform/jobs/tasks/: __init__.py  promotion_tasks.py
enterprise_v2/src/agent_skill_platform/services/: execution_service.py  projection_service.py  registry_service.py
enterprise_v2/src/agent_skill_platform/storage/object_store/: client.py
enterprise_v2/src/agent_skill_platform/storage/postgres/: models.py
enterprise_v2/src/agent_skill_platform/storage/repositories/: registry_repository.py
enterprise_v2/src/autoresearch_agent/packs/skill_research/: __init__.py
enterprise_v2/src/orchestrator/runtime/: envelope.py
enterprise_v2/src/skill_contract/adapters/: base.py
enterprise_v2/src/skill_contract/parsers/: interface.py  skill_md.py
enterprise_v2/tests/: test_platform_smoke.py
enterprise_v2/tests/fixtures/github-pr-review/scripts/: validate.py
enterprise_v2/upstream_snapshot/agentskillos/src/skill_contract/bundler/: runtime_install.py
(+291 files in other folders)
